syntax = "proto3";

service Member {
    rpc GetByID (GetByIDRequest) returns (MemberResponse);
}

message GetByIDRequest {
    int64 id = 1;
}

message MemberResponse {
    int64 id = 1;
    string phone = 2;
    string name = 3;
    int32 age = 4;
}
